# face-swapper-api

./: .env.local  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/services/: __init__.py  facefusion.py  fusion.py
app/utils/: file_manager.py
notebooks/: README.md
scripts/: facefusion_client.py  swap_client.py
src/: __init__.py
tests/: __init__.py
